temp fixed alignment

--- a/src/events/events.module.css
+++ b/src/events/events.module.css
@@ -62,6 +62,7 @@
   padding-bottom: 5px;
   margin: 10px, 0;
   margin-top: 20px;
+  block-size: 250px;
 }
 
 ul#links {
